--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
+body {
+    background-image: url("../images/clouds.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .container {
     width:960px;
-    
 }
