--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,47 @@
+@font-face {
+    font-family: simpsonsFont;
+    src: url("../fonts/Simpsonfont.ttf");
+}
 body {
     background-image: url("../images/clouds.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.container {
-    width:960px;
+ .jumbotron {
+    background-image: url("../images/homerhead.PNG");
+    background-repeat: no-repeat; 
+    background-size: contain;
+    align-items: center;
+    width: 600px;
+    height: 600px;
+    margin: auto;
 }
+
+#questionsAnswers {
+    align-content: center;
+} 
+
+h1 {
+    font-family: simpsonsFont;
+    color: red;
+    font-size: 3.25em;
+    margin: .25em 0em 1em 0em;
+    
+}
+ container {
+     align-content: center;
+ }
+
+ .answerBox {
+     background-color: rgb(74, 92, 131) ;
+     margin:1em;
+ }
+
+ .question {
+    font-family: simpsonsFont;
+    color: red;
+    font-size: 1.50em;
+    margin: .25em 0em 1em 0em;
+
+ }
